<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BaseInfo" >

    <Button
        android:id="@+id/PP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/PP" />

    <Button
        android:id="@+id/SC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SC" />

    <Button
        android:id="@+id/CountDays"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/CountDays" />
    
    <Button
        android:id="@+id/DG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/DG" />
    
    <TextView
            android:id="@+id/ppres"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ppres" />

</LinearLayout>
